configured assembly build